# cedes_camera

./: CMakeLists.txt  package.xml
cfg/: cedes.cfg
include/: interface.hpp  tcp_connection.hpp  udp_server.hpp
include/cedes/: camera_info.hpp  frame.hpp  interface.hpp  talker.h  tcp_connection.hpp  udp_server.hpp
launch/: camera.launch  cedes.launch
src/: CMakeLists.txt  frame.cpp  interface.cpp  talker.cpp  tcp_connection.cpp  udp_server.cpp
src/nodes/: cedes_node.cpp  talker_node.cpp
