<package format="2">
  <name>cedes</name>
  <version>0.0.1</version>
  <description>
    ROS node to publish raw image data for the Cedes ToF camera, including services and
    messages necessary for calibration.
  </description>
  <author>Will Zegers</author>
  <maintainer email="zegers@braincorporation.com">Will Zegers</maintainer>
  <license>BSD</license>
  <url>https://github.com/braincorp/cedes_cam</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>

  <test_depend>rostest</test_depend>
</package>
